--- a/BrainTree.Payment/Views/Shared/_Layout.cshtml
+++ b/BrainTree.Payment/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://github.com/ArtyomKolosov2/ASP.PaymentGateways">GitHub</a>
+                        </li>
                     </ul>
                 </div>
             </div>
